Polish CompositePropertySource[Tests]